@@ -72,122 +72,5 @@
 
 	</dependencies>
 
-	<build>
-
-		<plugins>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeScope>compile</includeScope>
-							<stripVersion>true</stripVersion>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>com.xeomar</groupId>
-				<artifactId>snare</artifactId>
-				<version>1.0-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<id>patch-dependencies</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>patch</goal>
-						</goals>
-						<configuration>
-							<modulePath>${project.build.directory}/dependency</modulePath>
-							<jars>
-								<jar>
-									<name>commons-io.jar</name>
-								</jar>
-								<jar>
-									<name>jackson-core.jar</name>
-								</jar>
-								<jar>
-									<name>jackson-annotations.jar</name>
-								</jar>
-								<jar>
-									<name>jackson-databind.jar</name>
-									<modules>
-										<module>com.fasterxml.jackson.core</module>
-										<module>com.fasterxml.jackson.annotation</module>
-									</modules>
-								</jar>
-							</jars>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- JLink cannot build a distribution yet because not all dependencies
-			are modules yet.-->
-			<!--
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jlink-plugin</artifactId>
-				<version>3.0.0-alpha-1</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jlink</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<ignoreSigningInformation>true</ignoreSigningInformation>
-				</configuration>
-			</plugin>
-			-->
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.5.0</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<executable>${java.home}/bin/jlink</executable>
-							<arguments>
-								<argument>--module-path</argument>
-								<argument>${jlink.module.path}</argument>
-								<argument>--add-modules</argument>
-								<argument>com.xeomar.annex</argument>
-								<argument>--output</argument>
-								<argument>${basedir}/target/jlink</argument>
-								<argument>--launcher</argument>
-								<argument>annex=com.xeomar.annex/com.xeomar.annex.Program</argument>
-
-								<argument>--strip-debug</argument>
-								<argument>--no-header-files</argument>
-								<argument>--no-man-pages</argument>
-								<!-- Valid value: 0, 1, 2 -->
-								<argument>--compress</argument>
-								<argument>2</argument>
-							</arguments>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-		</plugins>
-
-	</build>
-
 </project>
 
